# gmind

./: .env.example  .gitignore  AGENTS.md  README.md  install-skill.sh  install.sh  pyproject.toml
.agent/: state.md  stats.md
.github/workflows/: ci.yml
chrome-extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
docs/: GMind 设计方案 v2.md  GMind-Desktop-App设计文档.md  GMind-macOS-App化设计文档.md  GMind-macOS-v2-设计文档.md  GMind-v3-策划方案.md  GMind-知识雷达设计文档.md  GMind-饕餮盛宴-设计方案.md  HANDOFF-office-2026-05-13.md  gmind-design.md
docs/brand/: GMind-Brand-System.md
docs/design/: finder-send-to-gmind-design.md  gmind-app-design-system.md
gmind-desktop/: README.md  index.html  package-lock.json  package.json
gmind-desktop/prototypes/: gmind-menu-popover.html
gmind-desktop/scripts/: build.mjs  dev-server.mjs
gmind-desktop/src/: i18n.js  main.js  styles.css
gmind-desktop/src-tauri/: Cargo.toml  tauri.conf.json
gmind-desktop/src-tauri/capabilities/: default.json
gmind-desktop/src-tauri/src/: main.rs
gmind-macos/: Info.plist  README.md  project.yml
gmind-macos/GMind/: AskAIView.swift  DashboardView.swift  GMindAPI.swift  GMindApp.swift  MenuBarContentView.swift  MenuBarController.swift  ModelConfigView.swift  PanelManager.swift  QuickAddView.swift  QuickSearchView.swift  ServerManager.swift  SettingsView.swift  TaotieView.swift
gmind-macos/GMind.xcodeproj/: project.pbxproj
scripts/: migrate-state.py  re-embed.py
skills/gmind-cli/: SKILL.md
src/gmind/: __init__.py  add.py  ask.py  capture.py  cli.py  config.py  db.py  embed.py  enrich.py  (+20 more)
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_embed.py  test_extract.py  test_ingest.py  test_providers.py  test_solo.py  test_utils.py
(+29 files in other folders)
