[project]
name = "gmind"
version = "0.1.0"
description = "Knowledge graph and vector search engine based on PostgreSQL + pgvector"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pypinyin>=0.51",
    "pgvector>=0.2",
    "pdfplumber>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
gmind = "gmind.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmind"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
