[package]
name = "gmind-desktop"
version = "0.1.0"
description = "GMind cross-platform tray app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
